adjusted style sheet - overflow issue on small screens due to navbar width problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,19 @@
 /*    BODY     */
 
-.body {
-    background-color:red;
-}
-
 .row {
+    width:100%;
     padding: 0;
     margin: 0;
 }
 
 .container-fluid {
+    width:100%;
     padding: 0;
     margin: -1px 0px -0px 0;
-    background-color:red;
 }
 
 .col-xs-12 {
+    width:100%;
     padding:0;
     margin:0;
 }
@@ -59,6 +57,11 @@
     border-color: transparent;
 }
 
+.container-fluid .navbar-header {
+    margin-left:0;
+    margin-right:0;
+}
+
 .navbar-inactive {
     background-color: transparent;
 }
@@ -74,6 +77,7 @@
 
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
+    margin:0;
     border-color: transparent;
     padding-left: 0;
 }
@@ -91,6 +95,7 @@
 .navbar-default .navbar-toggle:hover>i {
     color: rgba(115, 168, 52, 1);
 }
+
 
 .social-links li a {
     padding: 8px 5px 0px 5px;
@@ -683,7 +688,7 @@ video {
     }
 
     .navbar-toggle {
-        padding: 10px 30px;
+        padding: 10px 10px;
     }
 
     .navbar-default .navbar-nav {
@@ -785,12 +790,14 @@ video {
 @media (max-width: 479px) {
 
     /*    NAVBAR     */
+
     .navbar-default .navbar-nav {
         margin-top: 15px;
     }
 
     .logo {
         max-width: 50%;
+        margin-left:0;
     }
 
     /*    TOP SECTION    */
@@ -844,17 +851,4 @@ video {
 
 }
 
-
-@media (max-width: 411px) { /*Pixel 2 margin required for full width*/
-    .container-fluid {
-        margin-right:5px;
-    }
-}
-
-
-@media (max-width: 360px) { /*Galaxy margin required for full width*/
-    .container-fluid {
-        margin-right:-5px;
-    }
-}
 
